Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.
- #279195 Remove deprecated calendar_week_range().
- Set min_date_date and max_date_date in the view object so calendar can be written.
- #278267 Add a theme for the jcalendar popup.
- #259127 Remove ajax back/next navigation on mini calendar, it's not working well enough.
- #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
- The cached ical feed cannot be used to store date objects, recreate them as needed.
- #234070 Fix broken ical title.
- #258501 Make sure calendar.inc is included when creating ical feed.
- #258515 Fix url in ical export.
- #266623 Protect against foreach() errors on empty ical feeds.
- PHP4 can't do comparisons of date objects, so alter calendar comparison code to compare formatted dates instead.
- Remove as many dependencies as possible from install files and auto-enable necessary modules.
- #272263 Make sure empty ical stream doesn't get into cache.
- #272732 Fix missing php closing tag.
- #261610 Prepare for a jQuery popup in the calendar by adding a unique id to the 'node' and altering the date theme to surpress all other dates if $node->date_id is set.
- #243172 Theme('calendar_empty') should be theme('calendar_empty_day'), patch by JohnAlbin.
- Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
- #270818 Fix datebox theme that still defined old deprecated variable 'params'.
- #270078 Fix typo in calendar-year.tpl.php.
- #270303 Make sure iCal part of default view only gets added in if iCal is enabled.

Version 2.0 beta3
=================
- Update README.txt.
- Add rrule to template. 
- Remove options from navigation, not really needed.
- Add in functions to get iCal export working.