@@ -206,6 +206,88 @@ class calendar_plugin_display_page extends views_plugin_display_page {
     $display->display_options['defaults']['row_options'] = FALSE;
     $display->display_options['defaults']['items_per_page'] = FALSE;
   } 
+  
+  function option_definition () {
+    $options = parent::option_definition();
+
+    $options['calendar_colors'] = array();
+    return $options;
+  }
+
+  /**
+   * Provide the summary for attachment options in the views UI.
+   *
+   * This output is returned as an array.
+   */
+  function options_summary(&$categories, &$options) {
+    // It is very important to call the parent function here:
+    parent::options_summary($categories, $options);
+
+    $categories['calendar_settings'] = array(
+      'title' => t('Calendar settings'),
+    );
+    
+    $colors = $this->get_option('calendar_colors');
+    $options['calendar_colors'] = array(
+      'category' => 'calendar_settings',
+      'title' => t('Legend colors'),
+      'value' => t('Edit'),
+    );
+  }
+   
+  function options_form(&$form, &$form_state) {
+    // It is very important to call the parent function here:
+    parent::options_form($form, $form_state);
+       
+    switch ($form_state['section']) {
+      case 'calendar_colors':
+        //TODO Add in methods other than content types for setting legend colors.
+        $method =  'types';
+  
+        // TODO Move the embedded styles other than the color into a stylesheet.
+       $form['#title'] .= t('Legend colors');
+       $form['#prefix'] = t('<h3>Content Type</h3><p>Set a hex color value (like #ffffff) to use in the calendar legend for each content type. Types with empty values will have no stripe in the calendar and will not be added to the legend.</p>');
+       $form['calendar_colors']['#tree'] = TRUE;
+       $form['calendar_colors']['colorpicker'] = array(
+          '#type' => 'calendar_colorpicker',
+          '#prefix' => '<div class="clear-block"><div style="float:left">',
+          '#suffix' => '</div>',
+        );
+        $colors = $this->get_option('calendar_colors'); 
+  
+        switch ($method) {
+          case 'types':
+            $color_types = node_get_types('names');
+            break;
+        }
+        foreach ($color_types as $key => $name) {
+          $form['calendar_colors']['color'][$key] = array(
+            '#title' => $name,
+            '#type' => 'calendar_colorfield',
+            '#default_value' => isset($colors[$key]) ? $colors[$key] : '#ffffff',
+            '#calendar_colorpicker' => 'calendar-colors-colorpicker',
+            '#prefix' => '<div style="float:left;margin-right:10px">',
+            '#suffix' => '</div>',
+          );
+        }
+        $form['calendar_colors']['color']['#suffix'] = '</div>';
+        break;
+    }
+  }
+
+ /**
+   * Perform any necessary changes to the form values prior to storage.
+   * There is no need for this function to actually store the data.
+   */
+  function options_submit($form, &$form_state) {
+    // It is very important to call the parent function here:
+    parent::options_submit($form, $form_state);
+    switch ($form_state['section']) {
+      case 'calendar_colors':
+        $this->set_option($form_state['section'], $form_state['values'][$form_state['section']]['color']);
+        break;
+    }
+  }  
 }
 
 /**
@@ -276,6 +358,22 @@ class calendar_plugin_display_block extends views_plugin_display_block {
  */
 class calendar_plugin_display_attachment extends views_plugin_display_attachment {
 
+  function attach_to($display_id) {
+    
+    // See if we're attaching to a block rather than a page.
+    if (substr($display_id, 0, 14) == 'calendar_block') {
+      $this->view->mini = TRUE;
+      $this->view->block = TRUE;
+      $this->view->parent_id = $display_id;
+    }
+    elseif (substr($display_id, 0, 8) == 'calendar') {
+      $this->view->parent_id = $display_id;
+    }
+    $this->view->calendar_colors = $this->view->display[$display_id]->handler->options['calendar_colors'];
+    parent::attach_to($display_id);
+    
+  }
+  
   function display_types($type = 'month') {
     $types = calendar_display_types();
     return $types[$type];
@@ -344,15 +442,6 @@ class calendar_plugin_week extends calendar_plugin_display_attachment {
 }
 
 class calendar_plugin_block extends calendar_plugin_display_attachment {
-  function attach_to($display_id) {
-    // See if we're attaching to a block rather than a page.
-    if ($display_id == 'calendar_block') {
-      $this->view->mini = TRUE;
-      $this->view->block = TRUE;
-    }
-    parent::attach_to($display_id);
-  }
-  
   function options(&$display) {
     parent::options($display);
     $display->display_options['calendar_type'] = 'month';
@@ -537,6 +626,7 @@ class calendar_view_plugin_style extends calendar_plugin_style {
       '#options' => array(0 => t('No'), 1 => t('Yes')),
       '#description' => t('Whether or not to show week numbers in the left column of calendar weeks and months.'),
       );
+
   }
   
    /**
