@@ -17,15 +17,6 @@ function _calendar_ical_setup_form($view_name) {
   $form = array();
   $view = views_get_view($view_name);
 
-  // Create an example of all the stripe colors below the form.
-  for ($i = 0; $i < 10; $i++) {
-    $node = new stdClass();
-    $node->stripe = $i;
-    $stripes[$i] = '<div style="width:20px;">'. $i .'</div>'.
-      '<div class="calendar" style="width:130px;float:left;">'. theme('calendar_stripe_stripe', $node) .'</div>';
-  }
-  $form['#suffix'] = t('<h3>Stripe options</h3>') . implode($stripes);
-
   $period = drupal_map_assoc(array(0, 3600, 10800, 21600, 32400, 43200, 86400, 172800, 259200, 604800, 1209600, 2419200, 4838400, 9676800), 'format_interval');
   $form['calendar_ical_expire_'. $view->name] = array(
     '#type' => 'select', '#title' => t('Expire iCal cache'),
@@ -65,13 +56,15 @@ function _calendar_ical_setup_form($view_name) {
         '#default_value' => $feed['url'],
         '#description' => t('The external feed url or internal file path and name. Change \'webcal://\' to \'http://\'.'),
       ),
+     'calendar_colorpicker' => array(
+        '#type' => 'calendar_colorpicker',
+        '#title' => t('Stripe color'),
+      ),
       'stripe' => array(
-        '#title' => t('Stripe'),
-        '#type' => 'select',
-        '#options' => range(0, 10),
-        '#default_value' => $feed['stripe'],
-        '#description' => t('The color stripe to use for this feed (not working yet).'),
-        '#suffix' => '<hr>',
+        '#type' => 'calendar_colorfield',
+        '#default_value' => isset($feed['stripe']) ? $feed['stripe'] : '#ffffff',
+        '#calendar_colorpicker' => $view_name .'-'. $delta .'-calendar-colorpicker',
+        '#description' => t('The hex color value (like #ffffff) to use for this feed\'s calendar stripe.'),
        ),
     );
   }
